<resources>
    <string name="app_name">AuPairApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="SubirImagen">Foto perfil</string>
    <string name="Nombre">Nombre</string>
    <string name="RepetirPass">Repita su contraseña</string>
    <string name="deRegistroaLogin">LOGIN</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="nextRegistro">Next</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dialog_message">¿Estás seguro?</string>
    <string name="dialog_title">¿Quieres cerrar sesión?</string>
    <string name="ok">Salir</string>
    <string name="cancel">Cancelar</string>
    <string name="addAnuncio">Añadir anuncio</string>
    <string name="anuncios">Anuncios</string>
    <string name="misAnuncios">Mis Anuncios</string>
    <string name="favoritos">Favoritos</string>
    <string name="chat">Chat</string>
    <string name="ajustes">Ajustes</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="EmailPerfil">Email:</string>
    <string name="RepitPass">Repita su contraseña</string>
    <string name="CambiarPass">Cambiar contraseña</string>
    <string name="NuevaPass">Nueva contraseña</string>
</resources>
