<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo1"
            app:layout_constraintBottom_toTopOf="@+id/editTextNombreRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAddInmueble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/Registro"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistroaLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPreImg" />

        <EditText
            android:id="@+id/editTextNombreRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/editTextEmailRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegistro"
            app:layout_constraintEnd_toEndOf="@+id/editTextNombreRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextNombreRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombreRegistro" />

        <EditText
            android:id="@+id/editTextPasswordRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRepeat"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegistro" />

        <EditText
            android:id="@+id/editTextPasswordRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/RepetirPass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubirImagen"
            app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
            app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />

        <Button
            android:id="@+id/buttonSubirImagen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/SubirImagen"
            app:layout_constraintBottom_toTopOf="@+id/btnAddInmueble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreImg"
            app:layout_constraintTop_toTopOf="@+id/imageViewPreImg" />

        <ImageView
            android:id="@+id/imageViewPreImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="120dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnAddInmueble"
            app:layout_constraintEnd_toStartOf="@+id/buttonSubirImagen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat"
            tools:src="@tools:sample/avatars[0]" />

        <Button
            android:id="@+id/buttonRegistroaLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorSecundary"
            android:text="@string/deRegistroaLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddInmueble" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
